--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>UI INTERN TASK</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+    <title>UI INTERN TASK</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
+	<script src="script.js" defer></script>
 </head>
 <body>
     <div class="wrapper">
-		<div class="container">
-        <article class="text-container">
-            <h2>SAMPLE HEADING</h2>
-			<p>Lorem ipsum dolor sit amet consectetur 
-                Adipisicing elit tempore dolorem 
-                Laborum distinctio incidunt quae voluptas tempore dolorem</p>
-			</article>
-        <form class="form-container">
-            <label for="email">Email:</label><br>
-		<input type="email" id="email" name="email" required><br>
-		<label for="dob">Date of Birth:</label><br>
-		<select id="dob-month" name="dob-month">
-			<option value="">Month</option>
-			<option value="01">January</option>
-			<!-- Add options for the remaining months -->
-		</select>
-		<select id="dob-year" name="dob-year">
-			<option value="">Year</option>
-			<option value="1990">1990</option>
-			<!-- Add options for the remaining years -->
-		</select><br>
-		<label for="password">Password:</label><br>
-		<input type="password" id="password" name="password" required><br>
-		<input type="radio" id="agency" name="account-type" value="agency">
-		<label for="agency">Agency</label><br>
-		<input type="radio" id="individual" name="account-type" value="individual">
-		<label for="individual">Individual</label><br>
-		<button type="submit">Submit</button>
-	</form>
+        <div class="container">
+            <article class="text-container">
+                <h2>SAMPLE HEADING</h2>
+				<ul>1. Lorem ipsum dolor sit amet consectetur </ul>
+				<ul>2. Adipisicing elit tempore dolorem  </ul>
+				<ul>3. Laborum distinctio incidunt quae voluptas tempore dolorem </ul>
+            </article>
+            <form class="form-container">
+                <h2>Create an account</h2>
+                <label for="email">Enter your email</label><br>
+                <input type="email" id="email" name="email" required><br>
+                <label for="dob">Date of birth (Optional)</label><br>
+                <input type="date" id="date" name="date" min="1900-01-01" max="2024-12-31" /><br>
+                <label for="password">Choose a strong password</label><br>
+                <input type="password" id="password" name="password" required><br>
+                <label for="idk">Are you an agency or individual?</label><br>
+                <input type="radio" id="agency" name="account-type" value="agency">
+                <label for="agency">Agency</label><br>
+                <input type="radio" id="individual" name="account-type" value="individual">
+                <label for="individual">Individual</label><br>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
     </div>
-</div>
 </body>
 </html>
