--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                 <input type="password" id="password" name="password" required><br>
                 <label for="idk">Are you an agency or individual?</label><br>
                 <input type="radio" id="agency" name="account-type" value="agency">
-                <label for="agency">Agency</label><br>
+                <label for="agency">Agency</label>
                 <input type="radio" id="individual" name="account-type" value="individual">
-                <label for="individual">Individual</label><br>
+                <label for="individual">Individual</label><br><br>
                 <button type="submit">Submit</button>
             </form>
         </div>
